# cleaning-agent

./: .env.example  .gitignore  .pre-commit-comfig.yaml  README.md  agents.py  app.py  assistants.py  chat.py  crew.py  database.py  eval.py  eval_data.py  get_db.py  graph.py  grinterface.py  lang_graph.py  main.py  nodes.py  pyproject.toml  red_teaming.csv  red_teaming.py  runcrew.py  state.py  tasks.py  tools.py  utils.py
assistants/: cleaning_scheduler.py  main_assistant.py  tools.py
crew/: agents.py  crew.py  tasks.py
dev/: customer-support.ipynb  main.py  tools.py
