[tool.poetry]
name = "crew"
version = "0.1.0"
description = ""
authors = ["kevin-v96 <kevinvegda@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
ipykernel = "^6.29.5"
jupyter = "^1.0.0"
pre-commit = "^3.8.0"
langgraph = "^0.1.19"
langchain-community = "^0.2.10"
langchain-openai = "^0.1.20"
tavily-python = "^0.3.5"
pandas = "^2.2.2"
openai = "^1.37.1"
fastapi = "^0.112.0"
uvicorn = "^0.30.5"
langserve = "^0.2.2"
sse-starlette = "^2.1.3"
gradio = "^4.40.0"
aiosqlite = "^0.20.0"
scikit-learn = "^1.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
